<resources>
    <string name="app_name">Liczby ujemne</string>
    <string name="menu_newGame">Play</string>
    <string name="menu_achievements">Achievements</string>
    <string name="menu_level">Level</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
    <string name="diffAdapter_anwerTime">Answer time:</string>
    <string name="diffAdapter_questionCount">Question count:</string>

    <string-array name="DifficultLevels">
        <!-- NUMBER, NAME, QUESTION COUNT, ANSWER TIME-->
        <item>1,Very easy,10,40</item>
        <item>2,Easy,20,30</item>
        <item>3,Medium,30,20</item>
        <item>4,Hard,40,25</item>
        <item>5,Very hard,50,10</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="end_summary">Correct answers: </string>

    <string-array name="Achievements">
        <!-- ID, DIFFICULT LEVEL, NAME, CORRECT ANSWERS-->
        <!-- VERY EASY-->
        <item>1,1,3 Correct answers,3</item>
        <item>2,1,5 Correct answers,5</item>
        <item>3,1,10 Correct answers,10</item>
        <!-- EASY-->
        <item>4,2,5 Correct answers,5</item>
        <item>5,2,10 Correct answers,10</item>
        <item>6,2,20 Correct answers,20</item>
        <!-- MEDIUM-->
        <item>7,3,10 Correct answers,10</item>
        <item>8,3,20 Correct answers,20</item>
        <item>9,3,30 Correct answers,30</item>
        <!-- HARD -->
        <item>10,4,10 Correct answers,10</item>
        <item>11,4,25 Correct answers,25</item>
        <item>12,4,40 Correct answers,40</item>
        <!-- VERY HARD-->
        <item>13,5,15 Correct answers,15</item>
        <item>14,5,25 Correct answers,25</item>
        <item>15,5,50 Correct answers,50</item>
    </string-array>
</resources>
