<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <Button
            android:text="@string/menu_newGame"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:onClick="NewGame"/>
        <Button
            android:text="@string/menu_achievements"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:onClick="Achievements"/>
        <Button
            android:text="@string/menu_level"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:onClick="ChooseDifficultLevel"/>
        <Button
            android:text="@string/menu_about"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:onClick="AboutGame"/>
        <Button
            android:text="@string/menu_exit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:onClick="ExitApplication"/>

    </LinearLayout>

</LinearLayout>
